Add prettier for formatting

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "format": "prettier -w ."
   },
-  "homepage": "https://mklein994.github.io"
+  "homepage": "https://mklein994.github.io",
+  "devDependencies": {
+    "prettier": "^2.3.1"
+  }
 }
